--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "crypto-js": "^3.1.8",
     "css-loader": "^0.25.0",
+    "d3": "^4.5.0",
+    "datamaps": "^0.5.8",
     "dateformat": "^1.0.12",
     "del": "^2.2.1",
     "dom-anchor-text-quote": "^3.0.0",
@@ -79,6 +81,7 @@
     "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
     "testdom": "^2.0.0",
+    "topojson": "^2.2.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
