--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-scroll": "^0.4.1",
+    "react-share": "^1.11.1",
     "react-textarea-autosize": "^4.0.5",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.5.2",
