--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "bourbon": "^4.2.7",
     "chai": "^3.5.0",
+    "chroma-js": "^1.2.1",
     "copy-webpack-plugin": "^4.0.1",
     "crypto-js": "^3.1.8",
     "css-loader": "^0.25.0",
@@ -62,10 +63,12 @@
     "node-sass": "^3.9.0",
     "normalize.css": "^5.0.0",
     "radium": "^0.18.1",
-    "react": "^15.3.0",
+    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-color": "^2.8.0",
+    "react-copy-to-clipboard": "^4.2.3",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.0",
     "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
