more user view edits

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "bourbon": "^4.2.7",
     "chai": "^3.5.0",
+    "chart.js": "^1.1.1",
     "chroma-js": "^1.2.1",
     "copy-webpack-plugin": "^4.0.1",
     "crypto-js": "^3.1.8",
@@ -79,6 +80,7 @@
     "react-share": "^1.11.1",
     "react-textarea-autosize": "^4.0.5",
     "react-transform-hmr": "^1.0.4",
+    "recharts": "^0.20.5",
     "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
     "redux-thunk": "^2.1.0",
