--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-share": "^1.11.1",
     "react-textarea-autosize": "^4.0.5",
     "react-transform-hmr": "^1.0.4",
+    "react-typekit": "^1.0.3",
     "recharts": "^0.20.5",
     "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
