--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
     "react-helmet": "^3.1.0",
     "react-phone-number-input": "^0.7.2",
     "react-redux": "^4.4.5",
+    "react-responsive": "^1.2.6",
     "react-router": "^3.0.0",
     "react-router-scroll": "^0.4.1",
+    "react-scrollchor": "^2.2.0",
     "react-share": "^1.11.1",
     "react-textarea-autosize": "^4.0.5",
     "react-transform-hmr": "^1.0.4",
