--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "bourbon": "^4.3.1",
     "chai": "^3.5.0",
     "chart.js": "^1.1.1",
     "chroma-js": "^1.2.1",
@@ -78,7 +79,6 @@
     "react-share": "^1.11.1",
     "react-textarea-autosize": "^4.0.5",
     "react-transform-hmr": "^1.0.4",
-    "react-typekit": "^1.0.3",
     "recharts": "^0.20.5",
     "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
